# xianyu-research-os

./: .env.literature-v2.example  .gitignore  README.md  environment.yml  install.sh  pyproject.toml  requirements.txt
00_System/agents/: research_director.md
01_今日打工/: 今日任务.md
01_今日打工/下班复盘/: 2026-07-08_下班复盘.md
02_项目管理/: 金毛狗脊_IS_项目总览.md
02_项目管理/分子对接/: 2026-07-08_槲皮素_AKT1.md
02_项目管理/虚拟筛选/: 2026-07-08_金毛狗脊候选成分虚拟筛选.md
03_实验记录/: 2026-07-08_CCK8.md  实验记录模板.md
04_文献笔记/: 2026-07-08_2023-8-17_2023年全国热带作物学术年会_PDF解析.md  2026-07-08_2023-8-17_2023年全国热带作物学术年会_V2文献卡片.md  2026-07-08_2023-8-17_2023年全国热带作物学术年会_文献笔记.md  2026-07-08_金毛狗脊缺血性脑卒中.md  2026-07-09_Contents_lists_available_at_ScienceDirect_V2文献卡片.md
04_文献笔记/V2卡片/: 2023-8-17_2023年全国热带作物学术年会.md  Andrographolide_modulates_HNF4α_activity_imparting_on_hepatic_metabolism.md
04_文献笔记/文献数据库/: 2023-8-17_2023年全国热带作物学术年会.json  Andrographolide_modulates_HNF4α_activity_imparting_on_hepaticmetabolism.json
05_数据分析/科研作图/: 2026-07-08_Figure1细胞活力.md
06_论文写作/: 2026-07-08_Discussion.md
07_常用Prompt/SOP中心/: 2026-07-08_H_R细胞模型.md
08_失败经验库/: 2026-07-08_HP20柱流速异常.md  失败经验模板.md
capabilities/: CAPABILITY_TEMPLATE.md
capabilities/docking/: README.md
capabilities/figure/: README.md
capabilities/graphpad_statistics/: README.md
capabilities/literature/: README.md
capabilities/molecular_dynamics/: README.md
capabilities/natural_product/: README.md
capabilities/network_pharmacology/: README.md
docs/: roadmap.md
literature_v2_backup/: app.py  requirements.txt
projects/: current_project.json
src/: main.py
(+60 files in other folders)
