[project]
name = "xianyu-research-os"
version = "0.3.0-alpha"
description = "🐟 AI Operating System for Biomedical Research"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
xianyu = "xianyu.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
